# project-oracle

./: .agent-instructions.md  .dockerignore  .env.example  .gitignore  .instructions.md  AGENTS.md  Dockerfile  PHASE_7.md  Procfile  README.md  mcp.json  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
apps/: README.md
docs/: DESIGN.md  api.md  architecture.md  data-model.md  deployment.md  design-intent.json  frontend-roadmap.md  persistence-recovery.md  roadmap.md  runbook.md  trading-flow-modules.md
migrations/: 001_create_trade_events.sql  002_add_event_key.sql  003_create_auth_users.sql  004_signal_lifecycle.sql
scratch/: clean_live_db.py
scripts/: mcp-server.mjs
services/: README.md
src/: main.py  replay.py  run_api.py  scheduler.py  strategy_governance.py  strategy_review.py  weekly_report.py
tests/: test_ai_analyst_adapter.py  test_anomaly_policy.py  test_api_endpoints.py  test_api_integration.py  test_api_security.py  test_auto_signal_generator.py  test_confluence_engine.py  test_daily_analysis_policy.py  test_exchange_adapter.py  test_market_screener.py  test_postgres_journal_repository.py  test_pullback_strategy.py  test_redis_risk_repository.py  test_replay_runner.py  test_retry.py  test_risk_controls.py  test_runtime.py  test_runtime_strategy_config.py  test_sentiment_gate.py  test_sniper_entry.py  test_strategy_intelligence.py  test_structure_engine.py  test_trade_quality.py  test_weekly_report.py  test_weekly_workflow.py
web/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+106 files in other folders)
